[metadata]
name = tldr
description = command line client for tldr
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/tldr-pages/tldr-python-client
author = Felix Yan
author_email = felixonmars@gmail.com
license = MIT
license_file = LICENSE.md
version = version
python_requires = >3.6

classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: SunOS/Solaris
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
    Topic :: System

[options]
install_requires =
    termcolor
    colorama
    shtab >= 1.3.10

[options.extra_require]
test =
    pytest

[options.entry_points]
console_scripts =
    tldr = tldr:cli

